# The-Royal-Dispatch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEMO_SCRIPT.md  GEMINI.md  GIT_RULES.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  graph.py  main.py  pyproject.toml  state.py
backend/db/: client.py
backend/db/migrations/: 001_init.down.sql  001_init.up.sql  001_initial.sql  002_add_children.down.sql  002_add_children.up.sql  003_drop_user_preferences.down.sql  003_drop_user_preferences.up.sql  003_users.sql  004_children_centric.down.sql  004_children_centric.up.sql  005_drop_user_token.down.sql  005_drop_user_token.up.sql  006_create_calls.down.sql  (+4 more)
backend/nodes/: classify_tone.py  extract_memories.py  fetch_brief.py  fetch_memories.py  generate_life_lesson.py  generate_story.py  infer_situation.py  load_persona.py  store_result.py  synthesize_voice.py
backend/personas/: ariel.yaml  belle.yaml  chase.yaml  cinderella.yaml  elsa.yaml  marshall.yaml  mirabel.yaml  moana.yaml  rapunzel.yaml  raya.yaml  rubble.yaml  skye.yaml
backend/routes/: admin.py  call.py  stories.py  users.py
backend/royal_dispatch_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/services/: elevenlabs_convai.py
backend/storage/: client.py
backend/tests/: conftest.py  test_admin_routes.py  test_api.py  test_call_routes.py  test_elevenlabs_convai.py  test_graph_pre_tts.py  test_persona_call_fields.py  test_storage_client.py  test_user_routes.py
backend/utils/: auth_token.py  child_detection.py  mem0_client.py  metrics.py  time_utils.py
(+270 files in other folders)
